# convolutional-filters-parallelization

./: README.md
src/: .gitignore  CMakeLists.txt  analysis.py  check.py  conv_filter.bend  conv_filter.c  conv_filter_for.c  conv_filter_for_matrix.c  conv_filter_serial  conv_filter_serial.c  conv_filter_serial.py  conv_filter_task.c  convert_images.py  generate_reports.sh  test.sh
src/images/ppms/: sines.ppm  snail.ppm
src/perf_outputs/: perf_stat_1.txt  perf_stat_10.txt  perf_stat_11.txt  perf_stat_12.txt  perf_stat_2.txt  perf_stat_3.txt  perf_stat_4.txt  perf_stat_5.txt  perf_stat_6.txt  perf_stat_7.txt  perf_stat_8.txt  perf_stat_9.txt
